--- a/.github/workflows/cargo.yml
+++ b/.github/workflows/cargo.yml
@@ -16,4 +16,4 @@ jobs:
       - uses: actions/checkout@v2
       - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
       - run: cargo build --verbose
-      - run: cargo test --verbose
+      - run: RUST_BACKTRACE=1 cargo test --verbose
