--- a/.github/workflows/cargo.yml
+++ b/.github/workflows/cargo.yml
@@ -10,10 +10,10 @@ jobs:
       matrix:
         toolchain:
           - stable
-          - beta
           - nightly
     steps:
       - uses: actions/checkout@v2
+      - run: mkdir src/static
       - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
       - run: cargo build --verbose
       - run: RUST_BACKTRACE=1 cargo test --verbose
